Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>I'm a 25 year old office worker. I spend most of my time working, and didn't even know what computer coding was until a few month ago. Now I'm on a journey to learn how to code.</p>
